--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
-.App {
-  text-align: center;
+
+  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+  --primary-color: #FFEBEB;
+  --secondary-color: #6DA9E4;
+  --tertiary-color: #F6BA6F;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App {
+  text-align: center;
+  /* background-color:var(--primary-color); */
+  background: rgb(255,235,235);
+background: linear-gradient(0deg, rgba(255,235,235,1) 0%, rgba(109,169,228,1) 100%);
+font-family: 'Raleway', sans-serif;
+
 }
+
 
 
