--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,21 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --primary-color: #FFEBEB;
-  --secondary-color: #6DA9E4;
-  --tertiary-color: #F6BA6F;
+  --primary-color: #ffebeb;
+  --secondary-color: #6da9e4;
+  --tertiary-color: #f6ba6f;
 }
 
 .App {
   text-align: center;
   /* background-color:var(--primary-color); */
-  background: rgb(255,235,235);
-background: linear-gradient(0deg, rgba(255,235,235,1) 0%, rgba(109,169,228,1) 100%);
-font-family: 'Raleway', sans-serif;
-
+  font-family: "Raleway", sans-serif;
+  background-color: white;
+  color: black;
 }
 
-
-
+h2 {
+  font-size: 23px;
+  font-weight: 400;
+  /* font-style: italic; */
+}
