--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,8 +11,11 @@
   color: black;
   font-weight: 600;
   /* border-bottom: 1px solid black; */
-  position: sticky;
+  position: fixed;
+  width: 100%;
   z-index: 100;
   bottom: 0;
   background-color: var(--primary-color);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
