--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,4 +15,6 @@
   z-index: 100;
   top: 0;
   background-color: var(--secondary-color);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
