--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
 
 .App-header {
   /* background-color:var(--secondary-color); */
-  min-height: 100px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,7 +11,8 @@
   color: white;
   font-weight: 600;
   /* border-bottom: 1px solid black; */
-  position: sticky;
+  position: fixed;
+  width: 100%;
   z-index: 100;
   top: 0;
   background-color: var(--secondary-color);
