--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,14 @@
 
 .App {
   text-align: center;
-  /* background-color:var(--primary-color); */
+  /* background-color: var(--primary-color); */
   font-family: "Raleway", sans-serif;
-  background-color: white;
+  background: rgb(255, 235, 235);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 235, 235, 1) 41%,
+    rgba(109, 169, 228, 1) 74%
+  );
   color: black;
   padding-top: 100px;
   padding-bottom: 100px;
@@ -23,5 +28,6 @@
 h2 {
   font-size: 23px;
   font-weight: 400;
-  /* font-style: italic; */
+  padding-left: 20px;
+  padding-right: 20px;
 }
